tests/ui/g-route-passive-first-visible-ambiguous.stderr
error[E0080]: evaluation panicked: Route unprojectable for this role: arms not mergeable, wire dispatch non-deterministic, and no route resolver provided
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<1, hibana::g::Route<hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>, hibana::g::Send<0, 1, hibana::g::Msg<9, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<0, 1, Msg<9, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  |           $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/g.rs
  |
  |           ProgramSourceError::ProjectionRouteUnprojectable => panic!(concat!(
  |  _____________________________________________________________-
  | |             "Route unprojectable for this role: arms not mergeable, ",
  | |             "wire dispatch non-deterministic, ",
  | |             "and no route resolver provided",
  | |         )),
  | |__________- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     const { validate_choreography::<Steps>() };
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<1, Route<hibana::g::Send<0, 1, Msg<9, ()>>, hibana::g::Send<0, 1, Msg<9, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
